commit with removed code smell